<resources>
    <string name="app_name">综合应用</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_outsys">退出程序</string>
    <string name="action_switch_theme">主题换肤</string>
    <string name="_string_robot_chat">机器人聊天</string>
    <string name="_string_system_info">系统信息</string>
    <string name="_string_media">音乐</string>
    <string name="_string_Books_movies_search">书籍电影搜索</string>
    <string name="about_msg">此应用是基于MD的支持库实现的，是针对此支持库的一个小Demo，其中的api来源于豆瓣(首页的电影部分由于时间原因还未完成)，开发测试机为魅族，Android版本5.1。
    \n\n 作者:陈骏
    \n\n Q Q:200622550
    \n\n 手机:18587113435</string>


    <string name="_string_setting_media">音乐</string>
    <string name="_string_setting_system">系统</string>
    <string name="_string_setting_robot">聊天</string>
    <string name="_string_setting_system_info_cpu_check">CPU检测</string>
    <string name="_string_setting_system_net_check">网络检测</string>
    <string name="_string_setting_system_info_service_check">运行服务</string>
    <string name="_string_setting_system_info_service_hardware">硬件检测</string>



    <string name="media_download_success">%s下载完成</string>
    <string name="media_now_download">正在下载：%s</string>
    <string name="media_unknown">未知</string>
    <string name="media_setting_key_mobile_network_play">mobile_network_play</string>
    <string name="media_setting_key_mobile_network_download">mobile_network_download</string>
    <string name="media_menu_share">推荐给朋友</string>
    <string name="media_network">网络</string>
    <string name="media_sure">确定</string>
    <string name="media_cancel">取消</string>
    <string name="media_share">分享</string>
    <string name="media_about">关于</string>
    <string name="media_delete">删除</string>
    <string name="media_search">搜索</string>
    <string name="media_loading">努力加载中…</string>
    <string name="media_load_fail">加载失败，请检查网络后重试</string>
    <string name="media_local_music">我的音乐</string>
    <string name="media_online_music">在线音乐</string>
    <string name="media_delete_music">删除%s？</string>
    <string name="media_setting_ringtone_success">设置铃声成功</string>
    <string name="media_no_local_music">暂无本地音乐</string>
    <string name="media_song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="media_song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="media_song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="media_mode_loop">列表循环</string>
    <string name="media_mode_shuffle">随机播放</string>
    <string name="media_mode_one">单曲循环</string>
    <string name="media_play_time_start">00:00</string>
    <string name="media_now_play">正在播放：%s</string>
    <string name="media_recent_update">最近更新：%s</string>
    <string name="media_unable_to_play">暂时无法播放</string>
    <string name="media_unable_to_download">暂时无法下载</string>
    <string name="media_unable_to_share">暂时无法分享</string>
    <string name="media_artist_info">歌手信息</string>
    <string name="media_artist_info_name">姓名：%s</string>
    <string name="media_artist_info_country">国籍：%s</string>
    <string name="media_artist_info_constellation">星座：%s</string>
    <string name="media_artist_info_stature">身高：%scm</string>
    <string name="media_artist_info_weight">体重：%skg</string>
    <string name="media_artist_info_birth">生日：%s</string>
    <string name="media_artist_info_intro">简介：%s</string>
    <string name="media_artist_info_empty">暂无歌手信息</string>
    <string name="media_share_music">我用%1$s分享了歌曲《%2$s》%3$s</string>
    <string name="media_search_tips">歌曲名、歌手名</string>
    <string name="media_search_empty">未找到相关结果</string>
    <string name="media_menu_search">在线搜索</string>
    <string name="media_menu_setting">功能设置</string>
    <string name="media_menu_about">关于波尼音乐</string>
    <string name="media_menu_night">夜间模式</string>
    <string name="media_menu_timer">定时停止播放</string>
    <string name="media_menu_exit">退出应用</string>
    <string name="media_setting_key_sound_effect">sound_effect</string>

    <string name="media_mobile_network_play">移动网络播放</string>
    <string name="media_ok_mobile_network_play">使用移动网络播放</string>
    <string name="media_no_mobile_network_play">不使用移动网络播放</string>

    <string name="setting_system_systime_check_time">设置系统信息-网络检测刷新时间</string>

    <string name="media_mobile_scen_file_size_title">设置扫描音乐最小限制</string>
    <string name="media_mobile_scen_file_size">允许系统扫描最小文件</string>
    <string name="media_mobile_network_download">移动网络下载</string>
    <string name="media_ok_mobile_network_download">使用移动网络下载</string>
    <string name="media_no_mobile_network_download">不使用移动网络下载</string>
    <string name="media_play">播放</string>
    <string name="media_sound_effect">音效调节</string>
    <string name="media_tips">温馨提示</string>
    <string name="media_play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="media_play_tips_sure">立即打开</string>
    <string name="media_download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="media_download_tips_sure">继续下载</string>
    <string name="media_device_not_support">您的设备不支持此功能</string>
    <string name="media_weather_temp">%s°</string>
    <string name="media_weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="media_timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="media_timer_cancel">定时停止播放已取消</string>
    <string name="media_share_app">青春，狂热，放纵，自由，当我们带上耳机以后做回自己，这是音乐的魅力。%s：http://fir.im/ponymusic</string>
    <string name="media_copyright">Copyright © 2017&#045;%d ChenJun</string>
    <string name="media_about_project_url">https://github.com/wangchenyan/PonyMusic</string>
    <string name="media_about_weibo">http://weibo.com/wangchenyan1993</string>
    <string name="media_about_jianshu">http://www.jianshu.com/users/3231579893ac</string>
    <string name="media_about_github">https://github.com/wangchenyan</string>
    <string name="media_no_permission">没有%1$s权限，无法%2$s！</string>
</resources>
