<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_home"
            android:icon="@drawable/iconfont_home"
            android:title="@string/_string_Books_movies_search" />
        <item
            android:id="@+id/navigation_item_robot_chat"
            android:checked="true"
            android:icon="@drawable/iconfont_source"
            android:title="@string/_string_robot_chat" />
        <item
            android:id="@+id/navigation_item_media"
            android:icon="@drawable/iconfont_blog"
            android:title="@string/_string_media" />
        <item
            android:id="@+id/navigation_item_custom_view"
            android:icon="@drawable/iconfont_custom_view"
            android:title="@string/_string_system_info" />
        <item
            android:id="@+id/navigation_item_snackbar"
            android:icon="@drawable/iconfont_custom_view"
            android:title="Snackbar演示" />

        <item android:title="更多">
            <menu>
                <item
                    android:id="@+id/navigation_item_setting"
                    android:checkable="true"
                    android:icon="@drawable/iconfont_skin"
                    android:title= "@string/action_settings" />

                <item
                    android:id="@+id/navigation_item_switch_theme"
                    android:checkable="true"
                    android:icon="@drawable/iconfont_skin"
                    android:title="主题换肤" />

                <item
                    android:id="@+id/navigation_item_about"
                    android:checkable="true"
                    android:icon="@drawable/iconfont_about"
                    android:title="关于" />
            </menu>
        </item>
    </group>

</menu>